# rl_nanoparticle

./: .gitignore  LICENSE  Makefile  README.md  bindings.cpp  config.yaml  environment.py  lattice.cpp  lattice.h  main.py  monte_carlo.cpp  monte_carlo.h  nn.py  pyproject.toml  rate_calculator.h  rb.py  run.cpp  simulation.cpp  simulation.h  site_info.h
kmc_simulation/: bindings.cpp  monte_carlo.cpp  monte_carlo.h  rate_calculator.cpp  run.cpp  simulation.cpp  simulation.h  site_info.cpp  utilities.cpp  utilities.h  variable_field.cpp  variable_field.h
rl/: ac_main.py  cat_ac_main.py  con_ac_main.py  config.yaml  environment.py  main.py  model_global_ens.pt  nn.py  policy.py  q_main.py  rb.py
