[project]
name = "rl-nanoparticles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pyyaml>=6.0.2",
    "tensorboard>=2.19.0",
    "torch-tb-profiler>=0.4.3",
    "torch>=2.6.0",
    "pybind11>=2.13.6",
]
